# paper-summary2slack

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: arxiv2slack.yml
pkg/: __init__.py  __meta__.py
pkg/cli/: arxiv2slack.py
pkg/utils/: _colorings.py  _path.py
